--- a/src/style.css
+++ b/src/style.css
@@ -28,6 +28,11 @@ h2 {
   margin: 20px 0;
 }
 
+form input {
+  background: none;
+  border: 2px solid black;
+}
+
 .bdAdd {
   display: flex;
   width: 400px;
@@ -69,7 +74,7 @@ h1 {
   margin: 60px 40px;
 }
 
-.bdList ol {
+#list {
   font-family: sans-serif;
   border: 3px solid black;
   width: 100%;
@@ -77,7 +82,7 @@ h1 {
 }
 
 .bdList ol li {
-  list-style-position: inside;
+  list-style: none;
   padding: 5px;
 }
 
@@ -102,8 +107,20 @@ form input[type="button"] {
   border: 2px solid black;
   box-shadow: 3px 3px;
   align-self: flex-end;
+  width: 70px;
 }
 
 form input[type="button"]:active {
   box-shadow: 0.5px 0.5px;
+}
+
+.validation {
+  color: red;
+  font-size: 14px;
+  font-family: sans-serif;
+}
+
+.spanner {
+  font-family: sans-serif;
+  font-size: 20px;
 }
