Add stylings to the leaderboard site

--- a/src/style.css
+++ b/src/style.css
@@ -6,20 +6,34 @@
   vertical-align: baseline;
 }
 
+body {
+  background: #fff0e5;
+}
+
 .main {
   display: flex;
   flex-direction: row;
   gap: 150px;
+  justify-content: center;
   padding: 20px 40px;
-  justify-content: space-between;
   margin: 0 auto;
 }
 
 .scores {
+  background-color: white;
   display: flex;
+  border: 3px solid;
   flex-direction: column;
   justify-content: space-between;
-  width: 50%;
+  width: 700px;
+  padding: 20px;
+}
+
+.scores:hover {
+  box-shadow: -5px 5px;
+  transition-duration: 200ms, 200ms;
+  transition-timing-function: ease, ease;
+  transition-delay: 0s, 0s;
 }
 
 h2 {
@@ -34,9 +48,20 @@ form input {
 }
 
 .bdAdd {
+  background-color: white;
   display: flex;
   width: 400px;
   flex-direction: column;
+  border: 3px solid;
+  align-items: center;
+  padding: 20px;
+}
+
+.bdAdd:hover {
+  box-shadow: -5px 5px;
+  transition-duration: 200ms, 200ms;
+  transition-timing-function: ease, ease;
+  transition-delay: 100ms, 100ms;
 }
 
 .bdAdd h2 {
@@ -44,17 +69,22 @@ form input {
 }
 
 .bghead {
+  font-family: 'Apercu', sans-serif;
   display: flex;
   justify-content: space-between;
   padding-bottom: 20px;
+  align-items: center;
 }
 
-.bghead input {
-  align-self: center;
+.bghead i {
+  padding-right: 13px;
+}
+
+.bghead button {
+  text-align: center;
   background: none;
   border: 2px solid black;
-  box-shadow: 3px 3px;
-  width: 90px;
+  padding: 5px 40px;
 }
 
 .bdAdd input {
@@ -64,21 +94,29 @@ form input {
   align-items: center;
 }
 
-.bghead input:active {
-  box-shadow: 0.5px 0.5px;
+.bghead button:hover {
+  box-shadow: -3px 3px;
+  transition: 300ms;
+}
+
+.bghead button:active {
+  box-shadow: -0.5px 0.5px;
+  transition: 300ms;
 }
 
 h1 {
-  font-family: sans-serif;
+  color: #183153;
+  font-family: 'Apercu', sans-serif;
+  text-align: center;
   font-size: 60px;
   margin: 60px 40px;
 }
 
 #list {
   font-family: sans-serif;
-  border: 3px solid black;
   width: 100%;
   padding: 0;
+  border: 2px solid black;
 }
 
 .bdList ol li {
@@ -99,15 +137,23 @@ form {
   display: flex;
   width: 200px;
   flex-direction: column;
-  gap: 12px;
+  gap: 20px;
+}
+
+form input[type="text"] {
+  padding: 10px 3px;
 }
 
 form input[type="button"] {
   background: none;
   border: 2px solid black;
-  box-shadow: 3px 3px;
   align-self: flex-end;
-  width: 70px;
+  padding: 5px 20px;
+}
+
+form input[type="button"]:hover {
+  box-shadow: -3px 3px;
+  transition: 300ms;
 }
 
 form input[type="button"]:active {
@@ -123,4 +169,20 @@ form input[type="button"]:active {
 .spanner {
   font-family: sans-serif;
   font-size: 20px;
+}
+
+@media (max-width: 1008px) {
+  .main {
+    flex-direction: column;
+    align-items: center;
+    gap: 50px;
+  }
+
+  .scores {
+    width: 100%;
+  }
+
+  .bdAdd {
+    width: 100%;
+  }
 }
